# Spreadsheet

./: .gitignore  CMakeLists.txt  main.cpp
include/: Cell.cpp  Cell.h  CellInputDialog.h  DataTable.cpp  DataTable.h  MaxOperation.h  MinOperation.h  MyApp.h  MyFrame.cpp  MyFrame.h  MyGrid.cpp  MyGrid.h  Observer.h  Operation.h  OperationFactory.h  OperationId.h  Subject.h  SumOperation.h
test/: CMakeLists.txt  CellTest.cpp  DataTableTest.cpp  MyGridTest.cpp  runAllTest.cpp
